<?xml version="1.0"?>
<package format="2">
  <name>webots_demo</name>
  <version>0.0.0</version>
  <description>The webots_demo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mckros@todo.todo">mckros</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!--导航-->>
  <build_depend>tf</build_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>tf</exec_depend>
  <build_depend>move_base</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <exec_depend>move_base</exec_depend>

  <!--用在rviz中-->>
  <exec_depend>robot_state_publisher</exec_depend> 
  <exec_depend>rviz</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
